Crash-loop on Silverblue
Affected version
Silverblue gnome-shell and mutter 40.alpha, Wayland. ThinkPad T495s with AMD integrated graphics (probably amdgpu).
Bug summary
Upon booting gdm doesn't show up, gnome-shell crashes repeatedly.
Relevant logs, screenshots, screencasts etc.
#0 0x00007fd776e9f2b2 in raise () from /lib64/libc.so.6
#1 0x0000556c197ab332 in dump_gjs_stack_on_signal_handler ()
#2 <signal handler called>
#3 0x00007fd776e9f2b2 in raise () from /lib64/libc.so.6
#4 0x00007fd776e888a4 in abort () from /lib64/libc.so.6
#5 0x00007fd776ee18f7 in __libc_message () from /lib64/libc.so.6
#6 0x00007fd776ee957c in malloc_printerr () from /lib64/libc.so.6
#7 0x00007fd776eea94c in _int_free () from /lib64/libc.so.6
#8 0x00007fd777cb3cfd in g_free () from /lib64/libglib-2.0.so.0
#9 0x00007fd777c7c0f2 in array_free () from /lib64/libglib-2.0.so.0
#10 0x00007fd776b2c856 in free_slices () from /usr/lib64/mutter-8/libmutter-cogl-8.so.0
#11 0x00007fd776b2c8b1 in _cogl_object_texture_2d_sliced_indirect_free () from /usr/lib64/mutter-8/libmutter-cogl-8.so.0
#12 0x00007fd776b41c53 in _cogl_texture_new_from_bitmap () from /usr/lib64/mutter-8/libmutter-cogl-8.so.0
#13 0x00007fd776b41d5d in cogl_texture_new_from_data () from /usr/lib64/mutter-8/libmutter-cogl-8.so.0
#14 0x00007fd7772c894f in clutter_image_set_data () from /usr/lib64/mutter-8/libmutter-clutter-8.so.0
#15 0x00007fd776dfffcc in pixbuf_to_st_content_image () from /usr/lib64/gnome-shell/libst-1.0.so
#16 0x00007fd776e0013f in finish_texture_load () from /usr/lib64/gnome-shell/libst-1.0.so
#17 0x00007fd776e0030f in on_symbolic_icon_loaded () from /usr/lib64/gnome-shell/libst-1.0.so
#18 0x00007fd777e9552a in g_task_return_now () from /lib64/libgio-2.0.so.0
#19 0x00007fd777e9556d in complete_in_idle_cb () from /lib64/libgio-2.0.so.0
#20 0x00007fd777cae1ab in g_idle_dispatch () from /lib64/libglib-2.0.so.0
#21 0x00007fd777caf0ef in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#22 0x00007fd777d018c8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#23 0x00007fd777cae7b3 in g_main_loop_run () from /lib64/libglib-2.0.so.0
#24 0x00007fd7770fcf9a in meta_run () from /lib64/libmutter-8.so.0
#25 0x0000556c197aac9c in main ()
bt full with debuginfo
#0 __GI_raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:49
set = {__val = {0, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 14576908217918267136, 0, 94303943293568, 94303908327888, 94303908324720}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#1 0x000055c4d5834332 in dump_gjs_stack_on_signal_handler (signo=6) at ../src/main.c:392
sa = {__sigaction_handler = {sa_handler = 0x55c4d58341a0 <dump_gjs_stack_alarm_sigaction>, sa_sigaction = 0x55c4d58341a0 <dump_gjs_stack_alarm_sigaction>}, sa_mask = {__val = {0 <repeats 16 times>}}, sa_flags = 0,
sa_restorer = 0x0}
i = 65
#2 <signal handler called>
No locals.
#3 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
set = {__val = {0, 4398327986080717064, 140720571311248, 29, 140720571310720, 16, 0, 0, 0, 94303944784976, 112, 139987093432202, 94303907317120, 139987094714880, 7883677795399066671, 7809644666712713775}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#4 0x00007f5148f3d8a4 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x0, sa_sigaction = 0x0}, sa_mask = {__val = {0, 3, 139987107884201, 139987108242373, 139987108608924, 18446744073709551615, 139987108242182, 94303944784880, 18446744073709551615,
139987108242201, 139987108212760, 18446744073709551615, 139987108242291, 139987108200561, 8, 94303905103152}}, sa_flags = 1239122033, sa_restorer = 0x55c4d5834100 <default_log_handler>}
sigs = {__val = {32, 8, 94303905103040, 4, 140720571311552, 139987108168191, 0, 8, 0, 8, 0, 139987107883445, 140720571311688, 8, 139987108200561, 94303944784880}}
#5 0x00007f5148f968f7 in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x7f51490a8b33 "%s\n") at ../sysdeps/posix/libc_fatal.c:155
ap = {{gp_offset = 24, fp_offset = 21956, overflow_arg_area = 0x7ffc0faa6770, reg_save_area = 0x7ffc0faa6700}}
fd = <optimized out>
list = <optimized out>
nlist = <optimized out>
cp = <optimized out>
#6 0x00007f5148f9e57c in malloc_printerr (str=str@entry=0x7f51490a6d02 "free(): invalid pointer") at malloc.c:5417
No locals.
#7 0x00007f5148f9f94c in _int_free (av=<optimized out>, p=<optimized out>, have_lock=0) at malloc.c:4204
size = 0
fb = <optimized out>
nextchunk = <optimized out>
nextsize = <optimized out>
nextinuse = <optimized out>
prevsize = <optimized out>
bck = <optimized out>
fwd = <optimized out>
__PRETTY_FUNCTION__ = "_int_free"
#8 0x00007f5149d68cfd in g_free (mem=0x7f5124399860) at ../glib/gmem.c:199
No locals.
#9 0x00007f5149d310f2 in array_free (array=0x7f512439b500, flags=(FREE_SEGMENT | PRESERVE_WRAPPER)) at ../glib/garray.c:443
segment = <optimized out>
#10 0x00007f5149d33a67 in g_array_free (farray=<optimized out>, free_segment=free_segment@entry=1) at ../glib/garray.c:424
array = <optimized out>
flags = <optimized out>
__func__ = "g_array_free"
#11 0x00007f5148be1856 in free_slices (tex_2ds=tex_2ds@entry=0x55c4d92141f0) at ../cogl/cogl/cogl-texture-2d-sliced.c:762
i = <optimized out>
#12 0x00007f5148be18b1 in _cogl_texture_2d_sliced_free (tex_2ds=0x55c4d92141f0) at ../cogl/cogl/cogl-texture-2d-sliced.c:842
No locals.
#13 _cogl_object_texture_2d_sliced_indirect_free (obj=0x55c4d92141f0) at ../cogl/cogl/cogl-texture-2d-sliced.c:61
No locals.
#14 0x00007f5148bf6c53 in _cogl_texture_new_from_bitmap (bitmap=bitmap@entry=0x55c4d9208840, flags=flags@entry=COGL_TEXTURE_NONE, internal_format=internal_format@entry=COGL_PIXEL_FORMAT_ANY,
can_convert_in_place=can_convert_in_place@entry=0, error=error@entry=0x7ffc0faa68f0) at ../cogl/cogl/deprecated/cogl-auto-texture.c:252
max_waste = 127
tex = <optimized out>
internal_error = 0x0
#15 0x00007f5148bf6d5d in _cogl_texture_new_from_data (error=0x7ffc0faa68f0, data=0x55c4d6bf9790 "", rowstride=64, internal_format=COGL_PIXEL_FORMAT_ANY, format=COGL_PIXEL_FORMAT_RGBA_8888, flags=COGL_TEXTURE_NONE, height=16,
width=-689294080, ctx=0x55c4d6ea3500) at ../cogl/cogl/deprecated/cogl-auto-texture.c:160
bmp = 0x55c4d9208840
tex = <optimized out>
bmp = <optimized out>
tex = <optimized out>
__func__ = {<optimized out> <repeats 28 times>}
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
#16 cogl_texture_new_from_data (width=width@entry=16, height=height@entry=16, flags=COGL_TEXTURE_NONE, format=format@entry=COGL_PIXEL_FORMAT_RGBA_8888, internal_format=internal_format@entry=COGL_PIXEL_FORMAT_ANY, rowstride=rowstride@entry=64, data=0x55c4d6bf9790 "") at ../cogl/cogl/deprecated/cogl-auto-texture.c:185
ignore_error = 0x55c4d72e2070
tex = <optimized out>
ctx = 0x55c4d6ea3500
#17 0x00007f514937d94f in clutter_image_set_data (image=0x55c4d86bce20, data=data@entry=0x55c4d6bf9790 "", pixel_format=pixel_format@entry=COGL_PIXEL_FORMAT_RGBA_8888, width=width@entry=16, height=height@entry=16, row_stride=row_stride@entry=64, error=0x7ffc0faa69c0) at ../clutter/clutter/clutter-image.c:250
priv = 0x55c4d86bce10
flags = <optimized out>
__func__ = "clutter_image_set_data"
#18 0x00007f5148eb4fcc in pixbuf_to_st_content_image (pixbuf=<optimized out>, width=<optimized out>, height=<optimized out>, paint_scale=<optimized out>, resource_scale=1) at ../src/st/st-texture-cache.c:564
image = 0x55c4d86bce20
error = 0x0
native_width = 16
native_height = <optimized out>
#19 0x00007f5148eb513f in finish_texture_load (data=0x55c4d8872fb0, pixbuf=0x55c4d87d5d80) at ../src/st/st-texture-cache.c:625
orig_key = 0x0
value = 0x0
image = 0x0
iter = <optimized out>
cache = 0x55c4d6c1b840
#20 0x00007f5148eb530f in on_symbolic_icon_loaded (source=0x55c4d6c6e190, result=<optimized out>, user_data=0x55c4d8872fb0) at ../src/st/st-texture-cache.c:667
pixbuf = 0x55c4d87d5d80
#21 0x00007f5149f4a52a in g_task_return_now (task=0x55c4d6c6e3d0) at ../gio/gtask.c:1215
No locals.
#22 0x00007f5149f4a56d in complete_in_idle_cb (task=task@entry=0x55c4d6c6e3d0) at ../gio/gtask.c:1229
No locals.
#23 0x00007f5149d631ab in g_idle_dispatch (source=source@entry=0x7f512c010920, callback=0x7f5149f4a560 <complete_in_idle_cb>, user_data=0x55c4d6c6e3d0) at ../glib/gmain.c:5808
again = <optimized out>
#24 0x00007f5149d640ef in g_main_dispatch (context=0x55c4d6bf8400) at ../glib/gmain.c:3325
dispatch = <optimized out>
prev_source = 0x0
begin_time_nsec = 0
was_in_call = <optimized out>
user_data = 0x55c4d6c6e3d0
callback = 0x7f5149f4a560 <complete_in_idle_cb>
cb_funcs = 0x7f5149e413a0 <g_source_callback_funcs>
cb_data = 0x7f512c00c240
need_destroy = <optimized out>
source = 0x7f512c010920
current = 0x55c4d6c0f790
i = 3
current = <optimized out>
i = <optimized out>
__func__ = {<optimized out> <repeats 16 times>}
source = <optimized out>
_g_boolean_var_ = <optimized out>
was_in_call = <optimized out>
user_data = <optimized out>
callback = <optimized out>
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
dispatch = <optimized out>
prev_source = <optimized out>
begin_time_nsec = <optimized out>
_g_boolean_var_ = <optimized out>
#25 g_main_context_dispatch (context=0x55c4d6bf8400) at ../glib/gmain.c:4016
No locals.
#26 0x00007f5149db68c8 in g_main_context_iterate.constprop.0 (context=0x55c4d6bf8400, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4092
max_priority = 0
timeout = 0
some_ready = 1
nfds = <optimized out>
allocated_nfds = <optimized out>
fds = 0x55c4d8f4fae0
begin_time_nsec = 0
#27 0x00007f5149d637b3 in g_main_loop_run (loop=0x55c4d6f36db0) at ../glib/gmain.c:4290
self = <optimized out>
__func__ = "g_main_loop_run"
#28 0x00007f51491ab440 in meta_run_main_loop () at ../src/core/main.c:708
No locals.
#29 0x00007f51491b1f9a in meta_run () at ../src/core/main.c:723
No locals.
#30 0x000055c4d5833c9c in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:550
ctx = <optimized out>
error = 0x0
ecode = <optimized out>