cogl/cogl/cogl-texture-2d-sliced.c
@@ -760,6 +760,7 @@ free_slices (CoglTexture2DSliced *tex_2ds)
         }
 
       g_array_free (tex_2ds->slice_textures, TRUE);
+      tex_2ds->slice_textures = NULL;
     }
 
   free_spans (tex_2ds);
